<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Welcome User!</string>
    <string name="app_name">AttendanceApp</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="quit">Quit</string>
    <string name="ActivityName1">Homework</string> 
    <string name="ActivityName2">Basketball</string> 
    <string name="ActivityName3">Art Class</string> 
    <string name="student_select">Select Students</string>
    <string name="toggleActivityFull">View All Activities</string>
    <string name="toggleActivityPart">View Only Frequent Activities</string>
    <string name="activitylistPart">Frequently Accessed Activities:</string>
    <string name="activitylistFull">All Activities:</string>
     <string name="current_activity">Current Activity</string>
    

</resources>