<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <Button android:id="@+id/Button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ActivityName1"
            android:onClick="onButtonClick" />
            
    <Button android:id="@+id/Button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ActivityName2"
            android:onClick="onButtonClick" />
            
    <Button android:id="@+id/Button3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ActivityName3"
            android:onClick="onButtonClick" />

</LinearLayout>